# metadata-generator-app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
api/: deps.py  main.py
api/routes/: collections.py  export.py  images.py  metadata.py  revise.py  status.py
app/: cli.py  config.py
app/dagster/: assets.py  definitions.py  jobs.py  resources.py  triggers.py
app/db/: crud.py  migrations.py  schema.py
app/export/: __init__.py
app/models/: local_vlm.py
app/utils/: image_utils.py
pages/: 1_Review.py  2_Session_Setup.py  3_Export.py
ui/: README.md  package-lock.json  svelte.config.js
ui/src/: app.css  app.html
ui/src/lib/: api.ts  state.svelte.ts  types.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/export/: +page.svelte
ui/src/routes/grid/: +page.svelte
ui/src/routes/review/: +page.svelte
ui/src/routes/setup/: +page.svelte
