[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "photo-review-app"
version = "0.1.0"
description = "Local-first photo metadata review tool for library collections"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
photo-review = "app.cli:app"
